manifests/dynamo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dynamo
  namespace: ${DYNAMO_NAMESPACE}
spec:
  selector:
    app: dynamo
  ports:
    - port: 80
      targetPort: 8000
